--- a/catalog.html
+++ b/catalog.html
@@ -3,22 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
-      <a class="main-header-logo" href="index.html">
-        <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
-      </a>
-      <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
-        <label class="visually-hidden" for="filter-search">Поиск</label>
-        <input type="search" name="search" placeholder="Поиск:" id="filter-search" required>
-        <button class="button search-button" type="submit">Найти</button>
-      </form>
-      <ul class="purchase">
-        <li><a href="#">Закладки: 0</a></li>
-        <li><a href="#">Корзина: 10</a></li>
-        <li><a href="#">Оформить заказ</a></li>
-      </ul>
+      <div class="header-top">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип интернет-магазина «Техномарт»">
+        </a>
+        <form class="search-form" method="get" action="https://echo.htmlacademy.ru">
+          <label class="visually-hidden" for="filter-search">Поиск</label>
+          <input type="search" name="search" placeholder="Поиск:" id="filter-search" required>
+          <button class="button search-button" type="submit">Найти</button>
+        </form>
+        <ul class="purchase">
+          <li><a href="#">Закладки: 0</a></li>
+          <li class="purchase-filled"><a href="#">Корзина: 10</a></li>
+          <li class="place-order"><a href="#">Оформить заказ</a></li>
+        </ul>
+      </div>
       <p class="index-page-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
       <p class="header-contacts">
         <span class="phone">
@@ -27,8 +33,10 @@
         <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
       </p>
       <ul class="authorized">
-        <li class="user-profile"><a href="#">Равшан Джамшутович</a></li>
-        <li class="user-logout"><a href="#">Выход</a></li>
+        <div class="user-menu">
+          <li class="user-profile"><a href="#">Равшан Джамшутович</a></li>
+          <li class="user-logout"><a href="#">Выход</a></li>
+        </div>
         <li class="user-navigation"><a href="#">Мои заказы</a></li>
         <li class="user-navigation"><a href="#">Личный кабинет</a></li>
       </ul>
@@ -44,7 +52,7 @@
         </ul>
       </nav>
     </header>
-    <main class="container">
+    <main class="container inner-page">
       <ul class="breadcrumbs">
         <li><a href="index.html">Главная</a></li>
         <li><a href="#">Каталог</a></li>
@@ -125,7 +133,7 @@
       <section class="catalog">
         <div class="catalog-sorting">
           <h2 class="visually-hidden">Список перфораторов</h2>
-          <h3>Сортировка:</h3>
+          <h3 class="sorting-heading">Сортировка:</h3>
           <ul class="sorting-type">
             <li><a class="sorting sorting-type-active" href="#">По цене</a></li>
             <li><a class="sorting" href="#">По типу</a></li>
@@ -150,8 +158,8 @@
               <span class="price">15500 Р.</span>
             </p>
             <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
+              <a class="button button-buy" href="#">Купить</a>
+              <a class="button button-bookmarks" href="#">В закладки</a>
             </p>
           </li>
           <li class="catalog-item">
@@ -166,8 +174,8 @@
               <span class="price">25500 Р.</span>
             </p>
             <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
+              <a class="button button-buy" href="#">Купить</a>
+              <a class="button button-bookmarks" href="#">В закладки</a>
             </p>
           </li>
           <li class="catalog-item">
@@ -182,8 +190,8 @@
               <span class="price">12500 Р.</span>
             </p>
             <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
+              <a class="button button-buy" href="#">Купить</a>
+              <a class="button button-bookmarks" href="#">В закладки</a>
             </p>
           </li>
           <li class="catalog-item">
@@ -198,8 +206,8 @@
               <span class="price">15500 Р.</span>
             </p>
             <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
+              <a class="button button-buy" href="#">Купить</a>
+              <a class="button button-bookmarks" href="#">В закладки</a>
             </p>
           </li>
           <li class="catalog-item">
@@ -215,8 +223,8 @@
               <span class="price">25500 Р.</span>
             </p>
             <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
+              <a class="button button-buy" href="#">Купить</a>
+              <a class="button button-bookmarks" href="#">В закладки</a>
             </p>
           </li>
           <li class="catalog-item">
@@ -230,8 +238,8 @@
               <span class="price">12500 Р.</span>
             </p>
             <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
+              <a class="button button-buy" href="#">Купить</a>
+              <a class="button button-bookmarks" href="#">В закладки</a>
             </p>
           </li>
           <li class="catalog-item">
@@ -247,8 +255,8 @@
               <span class="price">15500 Р.</span>
             </p>
             <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
+              <a class="button button-buy" href="#">Купить</a>
+              <a class="button button-bookmarks" href="#">В закладки</a>
             </p>
           </li>
           <li class="catalog-item">
@@ -263,8 +271,8 @@
               <span class="price">25500 Р.</span>
             </p>
             <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
+              <a class="button button-buy" href="#">Купить</a>
+              <a class="button button-bookmarks" href="#">В закладки</a>
             </p>
           </li>
           <li class="catalog-item">
@@ -278,14 +286,14 @@
               <span class="price">12500 Р.</span>
             </p>
             <p class="catalog-item-order">
-              <a href="#">Купить</a>
-              <a href="#">В закладки</a>
+              <a class="button button-buy" href="#">Купить</a>
+              <a class="button button-bookmarks" href="#">В закладки</a>
             </p>
           </li>
         </ul>
 
         <ul class="pagination-list">
-          <li class="pagination-item pagination-item-current">1</li>
+          <li class="pagination-item pagination-item-current"><a>1</a></li>
           <li class="pagination-item"><a href="#">2</a></li>
           <li class="pagination-item"><a href="#">3</a></li>
           <li class="pagination-item"><a href="#">Следующая</a></li>
@@ -302,41 +310,45 @@
       </section>
     </main>
     <footer class="main-footer">
-      <a class="footer-logo" href="index.html">
-        <img src="img/logo-technomart.svg" width="137" height="22" alt="Логотип интернет-магазина «Техномарт»">
-      </a>
-      <p class="footer-contacts">
-        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-        <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-      </p>
-      <ul class="footer-navigation">
-        <li><a href="company.html">Компания</a></li>
-        <li><a href="news.html">Новости</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="delivery.html">Доставка</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-      <ul class="sections">
-        <li><a href="#">Материалы</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-      </ul>
-      <p class="footer-copyright">
-        © 2010–2019 Компания «Техномарт»<br>
-        Все права защищены
-      </p>
-      <ul class="footer-social">
-        <li><a class="social-button" href="#">Вконтакте</a></li>
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Инстаграм</a></li>
-      </ul>
-      <p class="footer-feedback">
-        Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-      </p>
-      <p class="footer-develop">
-        Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-      </p>
+      <div class="footer-top">
+        <a class="footer-logo" href="index.html">
+          <img src="img/logo-technomart.svg" width="137" height="22" alt="Логотип интернет-магазина «Техномарт»">
+        </a>
+        <p class="footer-contacts">
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+        </p>
+        <ul class="footer-navigation">
+          <li><a href="company.html">Компания</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="delivery.html">Доставка</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <ul class="sections">
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструмент</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <p class="footer-copyright">
+          © 2010–2019 Компания «Техномарт»<br>
+          Все права защищены
+        </p>
+        <ul class="footer-social">
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+        <p class="footer-feedback">
+          Обратная связь: <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p class="footer-develop">
+          Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        </p>
+      </div>
     </footer>
 
     <div class="modal modal-cart-notification">
